--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     compile 'org.ros.rosjava_messages:geometry_msgs:[1.11,1.12)'
     compile 'org.ros.rosjava_messages:visualization_msgs:[1.11,1.12)'
     compile 'org.ros.rosjava_messages:sensor_msgs:[1.11,1.12)'
+    compile 'org.ros.rosjava_messages:std_msgs:0.5.10'
     compile 'org.opencv:opencv:2.4.8'
     //compile files('/usr/share/OpenCV/java/opencv-248.jar')
     /* Example of a local subproject dependency */
